# aigf-mcp-server

./: .dockerignore  .env.docker.example  .env.example  .env.local  .env.test  .gitconfig-security  .gitignore  .gitignore_global  .gitleaks.toml  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  BUGFIX_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINOS-LICENSE.md  LICENSE  LICENSE.spdx  NOTICE  README.md  TESTING_RESULTS.md  TEST_RESULTS_SUMMARY.md  docker-compose.yml  mcp_demo_config.json  mypy.ini  pyproject.toml  pytest.fast.ini  pytest.ini  requirements-lock.txt  requirements.in  requirements.txt  static_fallback_lists.py  test_sha_live.py
.cache/discovery/: github_discovery.json
.framework_cache/: eu-ai-act.yml  nist-ai-600-1.yml  owasp-llm.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  branch-protection.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  question.md
.github/workflows/: README.md  ci.yml  codeql.yml  conventional-commits.yml  dependabot-security-validation.yml  gitleaks.yml  release.yml  sbom.yml  security-analysis.yml  test-security-workflow.yml  validate-static-fallback.yml
config/: README.md
config/ci/: pre-commit-config.yaml
config/examples/: claude-desktop-config.json
config/security/: bandit.yml  semgrep.yml
coverage-reports/: coverage.json  pytest.xml
docs/: README.md  architecture-layers.md  integration-guide.md  mcp-conformance-2025-11-25.md  openemcp-compatibility.md  presentation.html  publishing-guide.md  static-fallback-maintenance.md  tools-reference.md  troubleshooting.md
docs/adr/: ADR-0001-layered-runtime-architecture.md  ADR-0002-openemcp-compat-layer.md  ADR-0003-search-tools-policy.md  README.md
docs/api/: README.md  error-handling.md  framework-architecture.md  integration-guide.md  mcp-tools.md  response-schemas.md
docs/developer/: CONTRIBUTING.md  README.md  api-reference.md  development-guide.md
docs/governance/: README.md  code-of-conduct.md  roadmap.md
docs/operations/: README.md  production-deployment.md  release-process.md  security.md
docs/presentation/: index.html
docs/reports/: BASELINE_VALIDATION_REPORT.md  STEP_17_CI_PIPELINE_REPORT.md  STEP_2_DEPENDENCY_PINNING_REPORT.md  STEP_3_PACKAGE_SKELETON_REPORT.md  VALIDATION_REPORT.md
docs/user/: README.md  installation-guide.md  usage-guide.md
docs/user-guide/: README.md  compliance-analysis.md  cross-framework-navigation.md  export-reporting.md  framework-search.md  getting-started.md
scripts/: README.md  bump_version.py  ci-config-analysis.md  ci-exact-simulation.sh  ci-local.sh  ci-sync-validator.sh  clean.sh  create_golden_files.py  dev-quick-setup.sh  dev-reset.sh  dev-setup.sh  dev-test-focused.sh  dev-test.sh  e2e_smoke_test.py  go-live-gate.sh  install-ironclad-protection.sh  pre-commit-ci-validation.sh  pre-push-checks.sh  quality-check.sh  semgrep-isolated.sh  setup-git-protection.sh  test-agent-cli-scenario.sh  test-auth-http-transport.sh  test-fast.sh  test-http-transport.sh  update-static-fallback.py  validate-api-consistency.sh  validate-tests.sh  verify-protection.sh
security-reports/: bandit-report.json  pip-audit-report.json  pylint-report.json  requirements.txt  semgrep-report.json
security-reports/mypy-report/: index.txt
src/finos_mcp/: __init__.py  _version.py  config.py  error_boundary.py  error_reporter.py  exceptions.py  fastmcp_main.py  fastmcp_server.py  logging.py  server.py
tests/: conftest.py  golden_baseline.json  local_mcp_test.py  run_stability_validation.py  test_id_debug.py  test_id_mapping.py  test_mcp_functionality.py  test_risk_detailed.py
tests/golden/: fast_mode_test.golden.json  get_mitigation_details.json  get_risk_details.json  list_all_mitigations.json  list_all_risks.json  memory_test_0.golden.json  memory_test_1.golden.json  memory_test_10.golden.json  memory_test_11.golden.json  memory_test_12.golden.json  memory_test_13.golden.json  memory_test_14.golden.json  memory_test_15.golden.json  memory_test_16.golden.json  memory_test_17.golden.json  memory_test_18.golden.json  memory_test_19.golden.json  memory_test_2.golden.json  memory_test_20.golden.json  memory_test_21.golden.json  memory_test_22.golden.json  memory_test_23.golden.json  memory_test_24.golden.json  memory_test_25.golden.json  memory_test_26.golden.json  memory_test_27.golden.json  memory_test_28.golden.json  memory_test_29.golden.json  memory_test_3.golden.json  memory_test_30.golden.json  memory_test_31.golden.json  memory_test_32.golden.json  memory_test_33.golden.json  memory_test_34.golden.json  memory_test_35.golden.json  memory_test_36.golden.json  memory_test_37.golden.json  memory_test_38.golden.json  memory_test_39.golden.json  memory_test_4.golden.json  (+68 more)
tests/integration/: simple_test.py  test_auth_http_transport.py  test_baseline_validation.py  test_console_script_execution.py  test_fastmcp_integration.py  test_framework_data_loading.py  test_frontmatter_golden.py  test_live_mcp_server.py  test_mcp_compliance.py  test_mcp_protocol_pytest.py  test_server_working.py  test_static_fallback_sync.py
tests/internal/: offline_config.py  test_advanced_mcp_capabilities.py  test_code_quality_automation.py  test_dev_scripts.sh  test_developer_tools.py  test_enterprise_patterns.py  test_fast_mode.py  test_golden_files.py  test_mcp_2025_patterns.py  test_mock_service_factory.py  test_performance_optimizations.py  (+1 more)
(+142 files in other folders)
