[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finos-ai-governance-mcp-server"
dynamic = ["version"]
description = "Model Context Protocol server for FINOS AI Governance Framework"
readme = "README.md"
authors = [
    {name = "Hugo Calderon", email = "calderon.hugo@gmail.com"}
]
license = {text = "Apache-2.0"}
keywords = ["mcp", "finos", "ai-governance", "model-context-protocol", "ai-risks", "ai-mitigations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.5,<3",
    "mcp>=1.14.0",
    "httpx>=0.28.0",
    "PyYAML>=6.0.0",
    "pydantic>=2.11.0",
    "tenacity>=8.0.0",
    # Security-focused validation libraries
    "pathvalidate>=3.2.0",
    "bleach>=6.1.0",
    "python-slugify>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-bleach>=6.2.0.20250809",
    "types-PyYAML>=6.0.0",
    "pip-tools>=7.0.0",
    "pre-commit>=3.0.0",
]
security = [
    "bandit>=1.7.0",
    "pylint>=3.0.0",
    "safety>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx[test]>=0.25.0",
]

[project.scripts]
finos-mcp = "finos_mcp.fastmcp_main:main"

[project.urls]
Homepage = "https://github.com/finos/finos-mcp-server"
Repository = "https://github.com/finos/finos-mcp-server"
Documentation = "https://github.com/finos/finos-mcp-server/blob/main/README.md"
"Bug Tracker" = "https://github.com/finos/finos-mcp-server/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]

# Development tool configurations

# Black removed - using Ruff format instead for unified toolchain

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
    "*/_version.py",  # Auto-generated by setuptools-scm
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security) - basic security checks
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # assert usage (acceptable in tests and development)
    "S301",  # pickle security (acceptable for internal cache with nosec comment)
]

[tool.ruff.lint.per-file-ignores]
# Internal development tools - allow subprocess calls and other dev patterns
"src/finos_mcp/internal/*" = ["S603", "S607", "S110", "S324", "E721"]
# Test files - allow various test patterns
"tests/*" = ["S106", "S101", "E712", "RUF059", "F841", "S105", "S603", "S607", "B017"]
"scripts/*" = ["UP006", "UP035"] # scripts can use older typing for compatibility

[tool.ruff.format]
# Use default settings, which are Black-compatible
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
# Exclude internal development tools and complex tests from type checking
exclude = [
    "src/finos_mcp/internal/",
    "tests/integration/test_live_mcp_server.py",
]

[tool.bandit]
# Use external bandit.yaml configuration file
configfile = "bandit.yaml"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest.*", "pytest_asyncio.*", "yaml.*", "pre_commit.*", "bandit.*", "ruff.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "-ra",
]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "mcp: MCP protocol tests",
    "console: Console script tests",
    "slow: Slow running tests",
    "asyncio: Async tests",
    "performance: Performance tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
fail_under = 65
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

# Security scanning tool configurations - see bandit.yaml and .semgrep.yml for detailed configs

[tool.setuptools_scm]
write_to = "src/finos_mcp/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"
